0.7.6 改为原来的算法